--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
       <button class="p-2 px- font-bold active:scale-[1.1] hidden">Войти</button>
       <button
         class="p-2 px-6 font-bold active:scale-[1.1] bg-blue-700 text-white rounded-[10px] hover:text-blue-700 hover:bg-white transition-all">
-        Быстрый заказ
+        <a href="./socialmedia.html">Быстрый заказ</a>
       </button>
     </div>
   </div>
