--- a/socialmedia.html
+++ b/socialmedia.html
@@ -48,10 +48,12 @@
             class="p-2 px- font-bold active:scale-[1.1] max-[406px]:hidden">
             Войти
           </button>
-          <button
-            class="p-2 px-6 font-bold active:scale-[1.1] bg-blue-700 text-white rounded-[10px] hover:text-blue-700 hover:bg-white transition-all max-[340px]:hidden">
-            <a href="./index.html">Быстрый заказ</a>
-          </button>
+          <a href="./index.html"
+            ><button
+              class="p-2 px-6 font-bold active:scale-[1.1] bg-blue-700 text-white rounded-[10px] hover:text-blue-700 hover:bg-white transition-all max-[340px]:hidden">
+              Быстрый заказ
+            </button></a
+          >
         </div>
         <label class="hidden max-[710px]:block" for="check">
           <i class="fa-solid fa-bars"></i>
@@ -827,10 +829,12 @@
     </div>
     <div>
       <button class="p-2 px- font-bold active:scale-[1.1] hidden">Войти</button>
-      <button
-        class="p-2 px-6 font-bold active:scale-[1.1] bg-blue-700 text-white rounded-[10px] hover:text-blue-700 hover:bg-white transition-all">
-        <a href="./index.html">Быстрый заказ</a>
-      </button>
+      <a href="./index.html"
+        ><button
+          class="p-2 px-6 font-bold active:scale-[1.1] bg-blue-700 text-white rounded-[10px] hover:text-blue-700 hover:bg-white transition-all">
+          Быстрый заказ
+        </button></a
+      >
     </div>
   </div>
 </header>
