--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       rel="shortcut icon"
       href="./src/assets/svg/logo.svg"
       type="image/x-icon" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
@@ -21,7 +23,13 @@
     <link rel="stylesheet" href="./dist/output.css" />
   </head>
   <body class="">
-    <header class="header py-[26px]">
+    <div class="loader-container" id="loader">
+      <div class="loader"></div>
+    </div>
+    <div id="content" style="display: none">
+      <!-- Your main content goes here -->
+    </div>
+    <header data-aos="fade-down" class="header py-[26px]">
       <div class="container2 flex items-center justify-between">
         <div class="flex items-center justify-between gap-[38px]">
           <div class="flex items-center gap-2">
@@ -63,7 +71,7 @@
     <section class="py-10">
       <div class="container2">
         <div class="flex items-center justify-between max-[1006px]:flex-col">
-          <div class="w-[50%] max-[1006px]:w-full">
+          <div data-aos="fade-right" class="w-[50%] max-[1006px]:w-full">
             <h1
               class="text-[46px] font-bold max-[1209px]:text-[30px] max-[375px]:text-[25px]">
               Продвижение во всех соцсетях за пару кликов
@@ -78,7 +86,7 @@
               Начать продвижение
             </button>
           </div>
-          <div class="max-[1006px]:w-full">
+          <div data-aos="fade-left" class="max-[1006px]:w-full">
             <img src="./src/assets/img/showcaseimg.png" alt="" />
           </div>
         </div>
@@ -396,9 +404,33 @@
               class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
               name=""
               id="">
+              <option value="">Какие способы оплаты вы принимаете?</option>
               <option value="">
                 Почему цены на ваши услуги ниже, чем у конкурентов?
               </option>
+              <option value="">
+                Почему цены на ваши услуги ниже, чем у конкурентов?
+              </option>
+            </select>
+          </div>
+          <div class="flex items-center gap-3 max-[1006px]:flex-col">
+            <select
+              class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
+              name=""
+              id="">
+              <option value="">Как вы гарантируете качество услуг?</option>
+              <option value="">
+                Почему цены на ваши услуги ниже, чем у конкурентов?
+              </option>
+              <option value="">
+                Почему цены на ваши услуги ниже, чем у конкурентов?
+              </option>
+            </select>
+            <select
+              class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
+              name=""
+              id="">
+              <option value="">Меня не заблокируют?</option>
               <option value="">
                 Почему цены на ваши услуги ниже, чем у конкурентов?
               </option>
@@ -413,7 +445,7 @@
               name=""
               id="">
               <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
+                Как я могу узнать о статусе моего заказа?
               </option>
               <option value="">
                 Почему цены на ваши услуги ниже, чем у конкурентов?
@@ -426,9 +458,7 @@
               class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
               name=""
               id="">
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
+              <option value="">Как я могу связаться с вами?</option>
               <option value="">
                 Почему цены на ваши услуги ниже, чем у конкурентов?
               </option>
@@ -442,39 +472,7 @@
               class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
               name=""
               id="">
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
-            </select>
-            <select
-              class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
-              name=""
-              id="">
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
-            </select>
-          </div>
-          <div class="flex items-center gap-3 max-[1006px]:flex-col">
-            <select
-              class="border rounded-[10px] p-4 pr-2 bg-[#f8f8f9] w-full text-ellipsis"
-              name=""
-              id="">
-              <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
-              </option>
+              <option value="">Как быстро выполняется заказ?</option>
               <option value="">
                 Почему цены на ваши услуги ниже, чем у конкурентов?
               </option>
@@ -487,7 +485,7 @@
               name=""
               id="">
               <option value="">
-                Почему цены на ваши услуги ниже, чем у конкурентов?
+                Что произойдет, если мои подписчики или лайки уйдут?
               </option>
               <option value="">
                 Почему цены на ваши услуги ниже, чем у конкурентов?
@@ -599,6 +597,18 @@
           clickable: true,
         },
       });
+    </script>
+    <script>
+      window.addEventListener("load", function () {
+        setTimeout(function () {
+          document.getElementById("loader").style.display = "none";
+          document.getElementById("content").style.display = "block";
+        }, 1000); // 1 seconds
+      });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
