--- a/socialmedia.html
+++ b/socialmedia.html
@@ -694,10 +694,10 @@
               по выгодным ценам.
             </p>
             <div class="flex items-center gap-3">
-              <img src="./src/assets/svg/icon1.svg" alt="" />
-              <img src="./src/assets/img/icon2.png" alt="" />
-              <img src="./src/assets/svg/icon3.svg" alt="" />
-              <img src="./src/assets/svg/icon4.svg" alt="" />
+              <a href=""><img src="./src/assets/svg/icon1.svg" alt="" /></a>
+              <a href=""><img src="./src/assets/img/icon2.png" alt="" /></a>
+              <a href=""><img src="./src/assets/svg/icon3.svg" alt="" /></a>
+              <a href=""><img src="./src/assets/svg/icon4.svg" alt="" /></a>
             </div>
           </div>
           <div class="flex flex-col gap-3">
