--- a/index.html
+++ b/index.html
@@ -98,7 +98,66 @@
           class="pb-5 text-[36px] text-white text-center font-bold max-[1209px]:text-[30px] max-[375px]:text-[25px]">
           Быстрый заказ
         </h1>
-        <div
+        <div class="swiper mySwiper bg-transparent">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide bg-blue-700 rounded">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/img/scrl1.png" alt="" />
+                <p class="font-bold">Instagram</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl2.svg" alt="" />
+                <p class="font-bold">VK</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl3.svg" alt="" />
+                <p class="font-bold">TikTok</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl4.svg" alt="" />
+                <p class="font-bold">Telegram</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl5.svg" alt="" />
+                <p class="font-bold">YouTube</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl6.svg" alt="" />
+                <p class="font-bold">Facebook</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl7.svg" alt="" />
+                <p class="font-bold">Twitter</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl8.svg" alt="" />
+                <p class="font-bold">Twitch</p>
+              </div>
+            </div>
+            <div class="swiper-slide rounded bg-blue-700">
+              <div class="flex p-2 gap-2 items-center rounded bg-transparent">
+                <img src="./src/assets/svg/scrl9.svg" alt="" />
+                <p class="font-bold">RuTube</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div
           class="flex items-center gap-[40px] p-3 rounded-[10px] bg-white justify-between overflow-scroll my-3">
           <div class="flex p-2 gap-2 items-center">
             <img src="./src/assets/img/scrl1.png" alt="" />
@@ -136,8 +195,8 @@
             <img src="./src/assets/svg/scrl9.svg" alt="" />
             <p class="font-bold">RuTube</p>
           </div>
-        </div>
-        <div class="flex gap-5 justify-between flex-wrap">
+        </div> -->
+        <div class="flex gap-5 justify-between flex-wrap py-10">
           <div
             class="text-[20px] font-bold p-[50px] text-center rounded-[10px] bg-white max-[490px]:w-[45%] max-[490px]:p-[20px] max-[400px]:text-[14px] w-[220px]">
             <p>🙋‍♂️‍</p>
